# smooth-slide-saver

./: AUTHORS  ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  README.md  configure  configure.in  configure.in.in  release.sh  smoothslidesaver.kdevelop  smoothslidesaver.kdevelop.spec
admin/: cvs.sh
debian/: changelog  control  copyright  rules
po/: Makefile.am  Makefile.in  de.po
src/: Makefile.am  Makefile.in  aboutdialog.ui  debug.cpp  debug.h  effect.cpp  effect.h  imageloadthread.cpp  imageloadthread.h  screenproperties.cpp  screenproperties.h  smoothslidesaver.cpp  smoothslidesaver.desktop  smoothslidesaver.h  smoothslidesaver.lsm  smoothslidesaverui.ui  smoothslidewidget.cpp  smoothslidewidget.h
templates/: h
